# xkb-switch

./: .gitignore  .vimrc_local.vim  CMakeLists.txt  COPYING  README  README.md  X11Exception.h  XKbSwitch.cpp  XKbSwitchApi.cpp  XKeyboard.cpp  XKeyboard.h  default.nix  localrc.vim  test.sh  vimtest.sh  xkb-group.sh
.github/workflows/: deb-build.yml
man/: xkb-switch.1
src/: Utils.hpp  X11Exception.h  XKbSwitch.cpp  XKbSwitch.hpp  XKbSwitchApi.cpp  XKeyboard.cpp  XKeyboard.h  XKeyboard.hpp
